--- a/hello.html
+++ b/hello.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hello, world!</p>
+    <h1>Hello, World!</h1>
+    <p>changed</p>
+    <p>Git How To?</p>
+    <p>Yes</p>
 </body>
 </html>
